fixed contacts spacing

--- a/style.css
+++ b/style.css
@@ -391,6 +391,12 @@ img {
     }
 }
 
+.message-box {
+    display: flex;
+    width: 100%;
+    padding-bottom: 20px;
+}
+
 .contact-contents textarea {
     width: 100%;
     height: 140px;
